.gradle/gradle.log
****************************
 Powered By MCP:             
 http://modcoderpack.com/    
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:downloadClient SKIPPED
:downloadServer SKIPPED
:getVersionJson
:extractUserDev UP-TO-DATE
:mergeJars SKIPPED
:applyBinPatches SKIPPED
:downloadMcpTools SKIPPED
:extractMcpData UP-TO-DATE
:genSrgs SKIPPED
:deobfBinJar SKIPPED
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
E:\1git\witchery\build\sources\java\com\emoniph\witchery\entity\EntityGrenade.java:171: error: method cantDamage in class EventUtils cannot be applied to given types;
						if (!EventUtils.cantDamage(entity1, playerEx)) //LeRioN Fix
						               ^
  required: Entity,Entity
  found: EntityLivingBase,ExtendedPlayer
  reason: actual argument ExtendedPlayer cannot be converted to Entity by method invocation conversion
Note: E:\1git\witchery\build\sources\java\com\emoniph\witchery\entity\ItemHuntsmanSpear.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 22.77 secs
